backend/src/main/java/com/example/career/global/error/exception/NotFoundException.java
package com.example.career.global.error.exception;

import com.example.career.global.error.errorcode.ErrorCode;

public class NotFoundException extends CustomException {

    public NotFoundException(ErrorCode errorCode) {
        super(errorCode);
    }

    public NotFoundException(ErrorCode errorCode, String message) {
        super(errorCode, message);
    }
}
